# lambda-calculus-for-all

./: .gitignore  README.md  dune-project  simply-lambda.opam
_build/: .db  .digest-db  log
_build/default/.dune/: configurator  configurator.v2
_build/default/lib/: simply_lambdas.cmxa  simply_lambdas.ml-gen
_build/default/lib/.merlin-conf/: lib-simply_lambdas
_build/default/lib/.simply_lambdas.objs/: simply_lambdas__Booleans.impl.d
_build/default/lib/.simply_lambdas.objs/byte/: simply_lambdas.cmi  simply_lambdas.cmo  simply_lambdas.cmt  simply_lambdas__Booleans.cmi  simply_lambdas__Booleans.cmo  simply_lambdas__Booleans.cmt
_build/default/lib/.simply_lambdas.objs/native/: simply_lambdas.cmx  simply_lambdas__Booleans.cmx
lib/: booleans.ml  dune
ocaml/: dune-project
ocaml/lib/: booleans.ml  dune
typescript/: package.json
